--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -19,7 +19,7 @@ section {
   flex-direction: column;
   gap: 1rem;
   padding: 0 var(--space-medium);
-  margin: var(--space-medium) 0;
+  margin: var(--space-small) 0;
 }
 
 .strava-chart-full {
@@ -46,6 +46,8 @@ section {
 
   .strava-top #strava-donut {
     flex: 1;
+    display: flex;
+    justify-content: center;
   }
 
   .strava-chart-full {
